# LibrePCB

./: CMakeLists.txt
apps/librepcb/: CMakeLists.txt  main.cpp
apps/librepcb-cli/: commandlineinterface.cpp
ci/: azure-jobs-linux.yml  azure-jobs-macos.yml  azure-jobs-windows.yml
libs/librepcb/core/: CMakeLists.txt
libs/librepcb/core/project/board/: boardd356netlistexport.cpp  boardpickplacegenerator.cpp
libs/librepcb/core/types/: length.h
libs/librepcb/editor/project/boardeditor/: boardeditor.cpp
libs/librepcb/editor/workspace/controlpanel/: controlpanel.cpp  controlpanel.h
libs/librepcb/gui/: CMakeLists.txt  editorapplication.cpp  objectlistmodel.cpp  objectlistmodel.h
tests/cli/open_project/: test_parser.py
tests/unittests/: CMakeLists.txt
tests/unittests/core/project/board/: boardd356netlistexporttest.cpp
